# api/schemas/__init__.py
@@ -12,6 +12,8 @@ from .identity import (
     PasswordResetVerify,
     UserResponse,
     UserUpdate,
+    PasswordChangeRequest,
+    PasswordChangeResponse,
     UserApiKeyResponse,
     UserApiKeyCreate,
     JWTToken,
@@ -27,6 +29,8 @@ __all__ = [
     "PasswordResetVerify",
     "UserResponse",
     "UserUpdate",
+    "PasswordChangeRequest",
+    "PasswordChangeResponse",
     "UserApiKeyResponse",
     "UserApiKeyCreate",
     "JWTToken",
